2014-07-11  Richard Biener  <rguenther@suse.de>

PR middle-end/61473
	* builtins.c (fold_builtin_memory_op): Inline memory moves
	that can be implemented with a single load followed by a
	single store.
	(c_strlen): Only warn when only_value is not 2.

	* gcc.dg/memmove-4.c: New testcase.
	* gcc.dg/strlenopt-8.c: XFAIL.
	* gfortran.dg/coarray_lib_realloc_1.f90: Adjust.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@212452 138bc75d-0d04-0410-961f-82ee72b054a4